--- a/lab/modules/www/index.html
+++ b/lab/modules/www/index.html
@@ -6,6 +6,35 @@
         <title>Modules example</title>
     </head>
 
+    <script>
+        
+        const imgUrl = 'https://images.theconversation.com/files/350865/original/file-20200803-24-50u91u.jpg';
+        const responsePromise = fetch(imgUrl);
+
+        window.onload = async () => {
+
+            const response = await responsePromise;
+            if (!response.ok) {
+
+                console.error(`corona cat download failed with http error code: ${response.status}`);
+                return;
+            }
+
+            const protocol = 'data';
+            const encoding = 'base64';
+            const contentType = response.headers.get('content-type');
+
+            const arrayBuffer = await response.arrayBuffer();
+            const bytesArray = new Uint8Array(arrayBuffer);
+            const bytesString = bytesArray.reduce((acc, byte) => acc + String.fromCharCode(byte), '');
+            const encodedData = btoa(bytesString);
+
+            const imgEl = document.getElementById('my-img');
+            imgEl.src = `${protocol}:${contentType};${encoding},${encodedData}`;
+        };
+
+    </script>
+
     <body>
         <div>
             <img id="my-img" width="100" height="100" style="object-fit: cover" />
