Use ES Modules instead of IIFE & make a single entry-point for my fronted app, which has type 'module'

--- a/lab/modules/www/index.html
+++ b/lab/modules/www/index.html
@@ -6,11 +6,7 @@
         <title>Modules example</title>
     </head>
 
-    <script src='static/helperScript.js'></script>
-
-    <script src='static/imgScript.js'></script>
-
-    <script src='static/audioScript.js'></script>
+    <script src='static/index.js' type='module'></script>
 
     <body>
         <div>
